--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <div class="block block8"></div>
       <div class="block block9"></div>
     </div>
-  </div>    
+  </div>
+<script type="text/javascript" src="./dist/bundle.js"></script>  
 </body>
 </html>
