--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
   </div>
 <script type="text/javascript" src="./dist/bundle.js"></script>
+<script type="text/javascript" src="./src/main.js"></script>
 <script>
   if('serviceWorker' in navigator) {
     navigator.serviceWorker
