--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </div>
   </div>
 <script type="text/javascript" src="./dist/bundle.js"></script>
-<script>
-  if('serviceWorker' in navigator) {
-    navigator.serviceWorker
-             .register('/sw.js')
-             .then(function() { console.log("Service Worker Registered"); });
-  }
-  </script>   
+ <script>
+        if('serviceWorker' in navigator) {
+          navigator.serviceWorker
+                .register('sw.js')
+                .then(function() { console.log("Service Worker Registered"); });
+        }
+    </script>
 </body>
 </html>
